# aimeeting

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: client-bundles.yml
agent/: remote_agent.py  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  asr_server.py  package-lock.json  package.json
backend/src/: aiConfigService.ts  aiService.ts  auth.ts  clientConfig.ts  emailService.ts  index.ts  passwordResetService.ts  rateLimit.ts  rooms.ts  smtpConfigService.ts  socketHandlers.ts
client/: package-lock.json  package.json
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: agent.rs  commands.rs  lib.rs  main.rs  mouse.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AiMinutesPanel.tsx  AiSettingsPanel.tsx  ChatPanel.tsx  Controls.tsx  DeviceSettingsPanel.tsx  HomeDeviceSettingsModal.tsx  InvitePanel.tsx  LanguageSwitcher.tsx  RecordingPanel.tsx  RemoteControlPanel.tsx  SecurityPanel.tsx  ServerSetup.tsx  VideoGrid.tsx  VideoTile.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useRecording.ts  useRemoteControl.ts  useWebRTC.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: config.ts  tauri.ts
frontend/src/pages/: Home.tsx  Meeting.tsx  ResetPassword.tsx
frontend/src/services/: api.ts  devicePreferences.ts  (+2 more)
(+4 files in other folders)
