[package]
name = "aimeeting-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "aimeeting_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aimeeting-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rust_socketio = { version = "0.6", features = ["async"] }
enigo = "0.2"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
